# discogsapp

./: .editorconfig  CMakeLists.txt  README.md  porting.h
discogsapp/: CMakeLists.txt  discogsapp.cpp  discogsapp.h
discogscli/: CMakeLists.txt  cli_options.cpp  client.cpp  client.hpp  client_private.hpp  config.cpp  config.hpp  config_parser.hpp  discogsapp.cpp  linux_browser.cpp  oauth1_data.cpp  oauth1_data.hpp  rapidjson_pretty.hpp  win32_browser.cpp
libdiscogs/: CMakeLists.txt  libdiscogs.cpp  libdiscogs.hpp  libdiscogs_collection.cpp  libdiscogs_database.cpp  libdiscogs_market.cpp  libdiscogs_private.hpp  libdiscogs_release.cpp  libdiscogs_wantlist.cpp  porting.cpp
libdiscogs/include/: CMakeLists.txt  base_classes.hpp  basic_information.hpp  class_common.hpp  collection.hpp  collection_add_response.hpp  folder_collection_releases.hpp  folder_releases.hpp  folder_response.hpp  identity.hpp  market_classes.hpp  market_get.hpp  market_listing.hpp  master.hpp  paginate.hpp  parser_common.hpp  release.hpp  search.hpp  wantlist.hpp
libdiscogs/parser_spec/: base_classes.json  basic_information.json  class_fragment.h  collection.json  collection_add_to_folder.json  config.json  folder_collection_releases.json  folder_post_response.json  folder_releases.json  identify.json  market_classes.json  market_get.json  market_listing.json  master.json  paginate.json  parser_fragment.h  release.json  run.sh  search.json  wantlist.json
libdiscogs/parsers/: CMakeLists.txt  collection.cpp  collection_add_response.cpp  collection_add_response_parser.hpp  collection_parser.hpp  folder_collection_releases.cpp  folder_collection_releases_parser.hpp  folder_releases.cpp  folder_releases_parser.hpp  folder_response.cpp  folder_response_parser.hpp  identity.cpp  identity_parser.hpp  market_get.cpp  market_get_parser.hpp  market_listing.cpp  market_listing_parser.hpp  master.cpp  master_parser.hpp  parser.cpp  release.cpp  release_parser.hpp  search.cpp  search_parser.hpp  wantlist.cpp  wantlist_parser.hpp
libdiscogs/private_include/: collection_parser.hpp  folder_releases_parser.hpp  wantlist_parser.hpp
liboauth1/: CMakeLists.txt  oauth1.cpp  oauth1.hpp  oauth1_data.hpp  oauth1_listener.cpp  oauth1_listener.hpp
libplatform/: CMakeLists.txt  exception.hpp  file.hpp  linux_file.cpp  platform.hpp  platform_rjs.hpp  rapidjson_file.hpp  win32_file.cpp  win32_platform.cpp
libplatform/tests/: CMakeLists.txt  filetest.cpp  openfile.cpp  rapidjson_file.cpp  rapidjson_parser.hpp  utf_codes.hpp  win32_helpers.hpp
